--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.31.1",
     "daisyui": "^2.2.2",
     "pinia": "^2.0.11",
     "vue": "^3.2.25",
